<resources>
    <string name="app_name">PlantsApp</string>

    <!-- Bottom Navigation -->
    <string name="title_bottom_nav_tasks">Tasks</string>
    <string name="title_bottom_nav_plants">Plants</string>
    <string name="title_bottom_nav_profile">Profile</string>

    <!-- Plant Detail Screen -->
    <string name="title_plant_detail_screen">%s</string>
    <string name="hint_detail_plant_name">Plant name</string>
    <string name="hint_detail_species_name">Species name</string>
    <string name="msg_detail_watering_text">Watering frequency: \n every %d days</string>
    <string name="title_button_delete">Delete</string>
    <string name="title_task_detail">every %s</string>
    <string name="title_plant_gallery_text">Plant gallery</string>
    <string name="title_delete_dialog_confirmation">Delete Plant</string>
    <string name="msg_delete_dialog_confirmation">Are you sure you want to delete this plant?</string>
    <string name="title_plant_detail_watering_task">Water</string>
    <string name="title_plant_detail_spraying_task">Spray</string>
    <string name="title_plant_detail_loosening_task">Loosen soil</string>
    <string name="title_plant_detail_taking_photo_task">Take photo</string>

    <!-- Plant Creation Screen -->
    <string name="title_plant_creation_screen">New Plant</string>
    <string name="hint_plant_name">Name</string>
    <string name="hint_species_name">Species name</string>
    <string name="hint_watering_frequency">Watering Frequency</string>
    <string name="hint_spraying_frequency">Spraying Frequency</string>
    <string name="hint_loosening_frequency">Loosening Frequency</string>
    <string name="hint_taking_photo_frequency">Taking Photo Frequency</string>
    <string name="title_button_save">Save</string>

    <plurals name="msg_creation_frequency_units">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <!-- Error Texts -->
    <string name="error_invalid_name">Provide name</string>
    <string name="error_invalid_species">Provide species name</string>
    <string name="error_invalid_watering_frequency">Select watering frequency</string>
    <string name="error_invalid_spraying_frequency">Select spraying frequency</string>
    <string name="error_invalid_loosening_frequency">Select loosening frequency</string>
    <string name="error_invalid_taking_photo_frequency">Select taking photo frequency</string>
    <string name="error_indistinctive_name">Plant with this name already exists!</string>
    <string name="error_copying_image">Cannot copy image from Gallery</string>

    <!-- Plants Screen -->
    <string name="title_plants_screen">My Plants</string>
    <string name="title_intent_picker_dialog">Select plant picture</string>
    <string name="msg_intent_picker_dialog">Choose from where you what to get picture</string>
    <string name="title_intent_picker_dialog_btn_gallery">Upload from Gallery</string>
    <string name="title_intent_picker_dialog_btn_camera">Upload from Camera</string>
    <string name="title_intent_picker_dialog_btn_cancel">Cancel</string>
    <string name="title_no_plants">No plants</string>
    <string name="msg_no_plants">When you have plants, you\'ll see them here</string>

    <!-- Tasks Screen -->
    <string name="title_tasks_screen">Tasks</string>
    <string name="title_today_date">Today</string>
    <string name="title_tomorrow_date">Tomorrow</string>
    <string name="title_watering_task">Watering</string>
    <string name="title_spraying_task">Spraying</string>
    <string name="title_loosening_task">Loosening soil</string>
    <string name="title_taking_photo_task">Taking photo</string>
    <string name="title_plant_tasks">Tasks</string>
    <string name="title_btn_uncompleted_state">Complete</string>
    <string name="title_btn_completed_state">Completed</string>
    <string name="title_btn_statistics">Statistics</string>
    <string name="title_no_tasks">No tasks</string>
    <string name="msg_no_tasks">When you have tasks, you\'ll see them here</string>

    <plurals name="msg_task_amount_left">
        <item quantity="one">%d task left</item>
        <item quantity="other">%d tasks left</item>
    </plurals>

    <!-- Task Notification -->
    <string name="title_notification_channel">Notification</string>
    <string name="msg_notification_description">Description</string>
    <string name="msg_notification_task_watering">Don\'t forget to water %s</string>
    <string name="msg_notification_task_spraying">Don\'t forget to spray %s</string>
    <string name="msg_notification_task_loosening">Don\'t forget to loosen soil for %s</string>
    <string name="msg_notification_task_taking_photo">Don\'t forget to take photo of %s</string>
    <string name="title_notification_complete_button">Complete</string>

    <!-- Authentication Screen -->
    <string name="title_auth_screen">Authentication</string>
    <string name="title_sign_in_btn">Sign in with Google</string>
    <string name="error_unable_to_sign_in">Unable to sign in</string>
    <string name="title_auth_quote">Life begins the day you start a garden</string>
    <string name="title_auth_quote_author">– Chinese proverb</string>

    <!-- Profile Screen -->
    <string name="title_profile_screen">Profile</string>
    <string name="title_btn_sign_out">Sign out</string>
    <string name="title_sign_out_dialog_confirmation">Sign Out</string>
    <string name="msg_sign_out_dialog_confirmation">Are you sure you want to sign out?</string>

    <!-- Other -->
    <string name="title_dialog_confirmation_btn_positive">Yes</string>
    <string name="title_dialog_confirmation_btn_negative">No</string>

    <!-- Loading -->
    <string name="title_dialog_loading">Loading...</string>

</resources>
