<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_plant_image"
        android:layout_width="0dp"
        android:layout_height="@dimen/auth_image_height"
        android:scaleType="fitXY"
        android:src="@drawable/auth_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/green_primary"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_plant_image" />

    <TextView
        android:id="@+id/tv_quote"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/title_auth_quote"
        android:textColor="@color/dark_green"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name"
        app:layout_constraintBottom_toTopOf="@id/btn_google_sign_in"
        app:layout_constraintVertical_bias="0.4"/>
    <TextView
        android:id="@+id/tv_quote_author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/title_auth_quote_author"
        android:textAlignment="viewEnd"
        android:textColor="@color/green_300"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintEnd_toEndOf="@id/tv_quote"
        app:layout_constraintStart_toStartOf="@id/tv_quote"
        app:layout_constraintTop_toBottomOf="@id/tv_quote" />

    <Button
        android:id="@+id/btn_google_sign_in"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_32dp"
        android:backgroundTint="?attr/colorPrimary"
        android:drawableLeft="@drawable/ic_google_icon"
        android:fontFamily="@font/amiko"
        android:text="@string/title_sign_in_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>