<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_8dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_8dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_detail_plant_image"
            android:layout_width="0dp"
            android:layout_height="@dimen/plant_detail_image_size"
            android:layout_marginTop="@dimen/margin_16dp"
            app:cardCornerRadius="@dimen/cardview_corner_radius_size"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_detail_plant"
                android:layout_width="match_parent"
                android:layout_height="@dimen/plant_detail_image_size"
                android:src="@drawable/ic_baseline_image_24" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_detail_plant_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/cv_detail_plant_image"
            app:layout_constraintBottom_toTopOf="@id/tv_detail_species_name"/>

        <TextView
            android:id="@+id/tv_detail_species_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_plant_name"
            app:layout_constraintBottom_toTopOf="@id/tv_title_tasks"/>

        <TextView
            android:id="@+id/tv_title_tasks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            android:text="@string/title_plant_tasks"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_species_name"
            app:layout_constraintBottom_toTopOf="@id/rv_detail_tasks"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_detail_tasks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/tv_title_tasks" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_plant_gallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/rv_detail_tasks">

            <TextView
                android:id="@+id/tv_plant_gallery_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_plant_gallery_text"
                android:textSize="@dimen/text_size_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_plant_photos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_plant_gallery_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="@string/title_button_delete"
            android:enabled="false"
            app:flow_verticalBias="1"
            android:layout_marginTop="@dimen/margin_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_plant_gallery" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
